package challange;

public interface Criptografia {

    String criptografar(String texto);

    String descriptografar(String texto);
}
